# verefine

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  evaluate.sh
src/refinement/: dfr.py  icp.py  tricp.py
src/refinement/cpp/: CMakeLists.txt  build.sh  icp.cpp
src/util/: dataset.py  experiment.py
src/verefine/: config.py  renderer.py  score.frag  score.vert  simulator.py  verefine.py
